tests/requests/invalid/009.http
PUT /stuff/here?foo=bar HTTP/1.0\r\n
Server: http://127.0.0.1:5984\r\n
Content-Type: application/json\r\n
Content-Length: 14\r\n
header0: 0\r\n
header1: 1\r\n
header2: 2\r\n
header3: 3\r\n
header4: 4\r\n
header5: 5\r\n
header6: 6\r\n
header7: 7\r\n
header8: 8\r\n
header9: 9\r\n
header10: 10\r\n
header11: 11\r\n
header12: 12\r\n
header13: 13\r\n
header14: 14\r\n
header15: 15\r\n
header16: 16\r\n
header17: 17\r\n
header18: 18\r\n
header19: 19\r\n
header20: 20\r\n
header21: 21\r\n
header22: 22\r\n
header23: 23\r\n
header24: 24\r\n
header25: 25\r\n
header26: 26\r\n
header27: 27\r\n
header28: 28\r\n
header29: 29\r\n
header30: 30\r\n
header31: 31\r\n
header32: 32\r\n
header33: 33\r\n
header34: 34\r\n
header35: 35\r\n
header36: 36\r\n
header37: 37\r\n
header38: 38\r\n
header39: 39\r\n
header40: 40\r\n
header41: 41\r\n
header42: 42\r\n
header43: 43\r\n
header44: 44\r\n
header45: 45\r\n
header46: 46\r\n
header47: 47\r\n
header48: 48\r\n
header49: 49\r\n
header50: 50\r\n
header51: 51\r\n
header52: 52\r\n
header53: 53\r\n
header54: 54\r\n
header55: 55\r\n
header56: 56\r\n
header57: 57\r\n
header58: 58\r\n
header59: 59\r\n
header60: 60\r\n
header61: 61\r\n
header62: 62\r\n
header63: 63\r\n
header64: 64\r\n
header65: 65\r\n
header66: 66\r\n
header67: 67\r\n
header68: 68\r\n
header69: 69\r\n
header70: 70\r\n
header71: 71\r\n
header72: 72\r\n
header73: 73\r\n
header74: 74\r\n
header75: 75\r\n
header76: 76\r\n
header77: 77\r\n
header78: 78\r\n
header79: 79\r\n
header80: 80\r\n
header81: 81\r\n
header82: 82\r\n
header83: 83\r\n
header84: 84\r\n
header85: 85\r\n
header86: 86\r\n
header87: 87\r\n
header88: 88\r\n
header89: 89\r\n
header90: 90\r\n
header91: 91\r\n
header92: 92\r\n
header93: 93\r\n
header94: 94\r\n
header95: 95\r\n
header96: 96\r\n
header97: 97\r\n
header98: 98\r\n
header99: 99\r\n
\r\n
{"nom": "nom"}
